--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsive.css">
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
-  <title>Home</title>
+  <title>Home new</title>
 </head>
 
 <body>
