--- a/about.html
+++ b/about.html
@@ -11,10 +11,11 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
+
     <title>Σχετικά με</title>
 </head>
 
-<body id="gameOp">
+<body id="about-page">
     <!-- site-header start -->
     <header class="site-header">
         <div class="container">
@@ -46,7 +47,7 @@
     <!-- site header end -->
 
     <!-- site banner start -->
-    <section class="hotel-bnr game">
+    <section class="hotel-bnr about">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -58,183 +59,82 @@
         </div>
     </section>
     <!-- site banner end -->
-    <!--game-description -->
     <section class="game-description">
         <div class="container">
             <div class="game-description-one">
-                <p>Μπείτε στο κορυφαίο καταφύγιο για τους λάτρεις της χλιδής και της συγκίνησης του παιχνιδιού! Η
-                    πλατφόρμα σύγκρισης ξενοδοχείων καζίνο μας χρησιμεύει ως η πύλη σας σε ένα βασίλειο όπου τα πολυτελή
-                    καταλύματα συνδυάζονται άψογα με τις σαγηνευτικές περιπέτειες τυχερών παιχνιδιών. Βυθιστείτε σε έναν
-                    κόσμο όπου τα λαμπερά φώτα του καζίνο συνδυάζονται με τις πολυτελείς ανέσεις αποκλειστικών
-                    ξενοδοχείων.
+                <p>Θα θέλαμε πολύ να ακούσουμε από εσάς. Μη διστάσετε να επικοινωνήσετε με οποιεσδήποτε ερωτήσεις ή
+                    αιτήματα μπορεί να έχετε. Η ομάδα μας δεσμεύεται να παρέχει ακριβείς και ολοκληρωμένες πληροφορίες,
+                    εξασφαλίζοντας μια απρόσκοπτη και ευχάριστη εμπειρία για εσάς.
                 </p>
-                <p>Είτε επιδιώκετε τη διαχρονική γοητεία που βρίσκεται στα ιστορικά ιδρύματα είτε τη σύγχρονη
-                    πολυπλοκότητα των θέρετρων αιχμής, η προσεκτικά επιλεγμένη επιλογή μας σας παρακινεί να ανακαλύψετε
-                    τα καλύτερα ξενοδοχεία καζίνο σε όλη την Ιταλία. Από διάσημα καζίνο μέχρι εκλεπτυσμένα ακίνητα κατά
-                    μήκος των ελληνικών νησιών και κρυμμένα πετράδια σε εξωτικά
-                    καταφύγια, οι σε βάθος συγκρίσεις μας προσφέρουν ολοκληρωμένες πληροφορίες, διασφαλίζοντας ότι θα
-                    κάνετε καλά ενημερωμένες επιλογές για έναν αξέχαστο συνδυασμό ψυχαγωγίας και απόλαυσης.
+
+                <p>ΗΛΕΚΤΡΟΝΙΚΗ ΔΙΕΥΘΥΝΣΗ:</p>
+                <span><a href="mailto:info@στοίχημαένα.com ">info@στοίχημαένα.com </a></span>
+                <p>Ωρες γραφείου: </p>
+                <p>Από Δευτέρα έως Παρασκευή, από τις 9:00 έως τις 18:00
                 </p>
-                <p>Αφήστε τα ζάρια να ρίξουν και τους κυλίνδρους να γυρίσουν καθώς σας καθοδηγούμε σε μια εικονική
-                    οδύσσεια των πιο μαγευτικών ξενοδοχείων καζίνο στην Ιταλία, όπου ο ενθουσιασμός του παιχνιδιού
-                    συγχωνεύεται άψογα με τη γοητεία των πολυτελών καταλυμάτων. Συγκρίνετε τα καλύτερα ξενοδοχεία καζίνο
-                    στην Ελλάδα με ένα πάτημα ενός κουμπιού. </p>
             </div>
-            <div class="planning-bullet">
-                <div class="bullet-planning">
-                    <h4>Επιλέγοντας το σωστό ξενοδοχείο καζίνο</h4>
 
-                    <ul>
-                        <li class="heading">Ποικιλία Παιχνιδιών: </li>
-                        <li class="paralist">Αξιολογήστε τη γκάμα των διαθέσιμων επιλογών παιχνιδιών. Από τα κλασικά
-                            τραπέζια μέχρι τις
-                            σύγχρονες υποδοχές, βεβαιωθείτε ότι το καζίνο ξενοδοχείο ικανοποιεί τις προτιμήσεις και τα
-                            επίπεδα δεξιοτήτων σας.
-                        </li>
-                        <li class="heading">Διασκέδαση Εκτός Παιχνιδιού: </li>
-                        <li class="paralist">Εξερευνήστε τις προσφερόμενες διασκεδαστικές επιλογές εκτός του καζίνο.
-                            Είτε πρόκειται για
-                            ζωντανές εκδηλώσεις, εκλεκτές γευστικές απολαύσεις είτε υπηρεσίες σπα, μια ολοκληρωμένη
-                            εμπειρία εμπλουτίζει τη διαμονή σας.
-                        </li>
-                        <li class="heading">Προγράμματα Επιβράβευσης:
-                        </li>
-                        <li class="paralist">Εξετάστε τα προγράμματα πιστότητας ή επιβράβευσης που προσφέρει το καζίνο.
-                            Πολλά καταλύματα
-                            προσφέρουν προνόμια, έκπτωσεις και αποκλειστικές προσφορές για τους επαναλαμβανόμενους
-                            επισκέπτες, ενισχύοντας τη συνολική αξία της διαμονής σας.
-                        </li>
-                        <li class="heading">Οικονομικές Επιλογές: </li>
-                        <li class="paralist">Καθορίστε έναν προϋπολογισμό για το ταξίδι σας, καλύπτοντας τα έξοδα για τα
-                            παιχνίδια, τη διαμονή και άλλες ανέσεις. Επιλέξτε ένα καζίνο ξενοδοχείο που είναι σύμφωνο με
-                            τις οικονομικές σας σκέψεις, εξασφαλίζοντας μια αξέχαστη εμπειρία χωρίς να θίγετε τον
-                            προϋπολογισμό σας. </li>
-                    </ul>
-
-                </div>
-            </div>
         </div>
     </section>
-    <!--game-description -->
 
-    <!-- The best casino hotels in Greece -->
-    <section class="trusted">
-        <div class="container">
-            <div class="trusted-wrapper">
-                <h3>Τα καλύτερα ξενοδοχεία καζίνο στην Ελλάδα
-                </h3>
-            </div>
-            <div class="trusted-inner">
-                <div class="row">
-                    <div class="col-lg-3">
-                        <div class="trusted-col">
-                            <div class="img1">
-                                <a href="https://thessaloniki.regencycasinos.gr/" target="_blank"><img
-                                        src="images/Regency.jpg" alt="" class="img-fluid"></a>
-                                <div class="icon"><i class="bi bi-bar-chart"></i></div>
-                            </div>
-                            <h2 class="title"><a href="https://thessaloniki.regencycasinos.gr/" target="_blank">Regency
-                                    Casino Thessaloniki </a></h2>
-                            <p> Βρίσκεται στη Θεσσαλονίκη και θεωρείται ένα από τα μεγαλύτερα και πολυτελή καζίνο στην
-                                Ελλάδα, προσφέροντας ποικιλία επιλογών παιχνιδιού και ψυχαγωγία. </p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <div class="trusted-col">
-                            <div class="img1">
-                                <a href="https://www.clubhotelloutraki.gr/en/ " target="_blank"> <img
-                                        src="images/Club1.jpg" alt="" class="img-fluid"></a>
-                                <div class="icon"><i class="bi bi-bar-chart"></i></div>
-                            </div>
-                            <h2 class="title"><a href="https://www.clubhotelloutraki.gr/en/ " target="_blank"> Club
-                                    Hotel Loutraki</a></h2>
-                            <p>Στη Λουτράκι, αυτό το θέρετρο περιλαμβάνει ένα καζίνο και είναι γνωστό για τις υπηρεσίες
-                                του σπα, καθιστώντας το δημοφιλές για τον συνδυασμό παιχνιδιού και χαλάρωσης.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <div class="trusted-col">
-                            <div class="img1">
-                                <a href="https://www.clubhotelloutraki.gr/" target="_blank"><img src="images/Club.jpg"
-                                        alt="" class="img-fluid"></a>
-                                <div class="icon"><i class="bi bi-bar-chart"></i></div>
-                            </div>
-                            <h2 class="title"><a href="https://www.clubhotelloutraki.gr/" target="_blank">Casino
-                                    Loutraki</a></h2>
-                            <p> Αυτό το καζίνο ανήκει στο Club Hotel Loutraki και είναι εκτιμημένο για την ατμόσφαιρά
-                                του και τις εκδηλώσεις ψυχαγωγίας.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <div class="trusted-col">
-                            <div class="img1">
-                                <a href="https://www.portocarras.com/el/" target="_blank"> <img src="images/Porto.jpg"
-                                        alt="" class="img-fluid"></a>
-                                <div class="icon"><i class="bi bi-bar-chart"></i></div>
-                            </div>
-                            <h2 class="title"><a href="https://www.portocarras.com/el/" target="_blank">Porto Carras
-                                    Grand Resort:</a></h2>
-                            <p> Παρόλο που είναι κυρίως ένα θέρετρο, το Porto Carras Grand Resort στη Χαλκιδική
-                                περιλαμβάνει και ένα καζίνο μεταξύ των παροχών του, προσφέροντας στους επισκέπτες
-                                επιλογές για ψυχαγωγία και παιχνίδι.
-
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- The best casino hotels in Greece -->
-    <div class="dropdown__section">
+    <section class="conatct-page">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 col-sm-12 mb-5">
-                    <div class="accordion" id="accordionExample">
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingTwo">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    Ο ολοκληρωμένος οδηγός μας για τα τυχερά παιχνίδια:
-                                </button>
-                            </h2>
-                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                                data-bs-parent="#accordionExample" style="">
-                                <div class="accordion-body">
-                                    <p>Συνιστούμε σε όλους τους παίκτες να εξοικειωθούν με τους κανόνες και τις
-                                        στρατηγικές του παιχνιδιού
-                                        που παίζεται. Η κατανόηση των αποχρώσεων αυξάνει τις πιθανότητές σας να λάβετε
-                                        τεκμηριωμένες
-                                        αποφάσεις. </p>
-                                    <p><span>Κατανοώντας τις πιθανότητες: </span>Κάθε παιχνίδι έχει τις δικές του
-                                        αποδόσεις. Η κατανόηση
-                                        της πιθανότητας νίκης μπορεί να επηρεάσει τη στρατηγική σας. Εστιάστε σε
-                                        παιχνίδια για τα οποία
-                                        έχετε τις περισσότερες γνώσεις και απολαμβάνετε να παίζετε. </p>
-                                    <p><span>Εξετάστε τα πολλαπλά στοιχήματα:</span>Σκεφτείτε το ενδεχόμενο να
-                                        κατανείμετε τα στοιχήματά
-                                        σας σε πολλές επιλογές. Αυτό μπορεί να βοηθήσει στη διαχείριση των κινδύνων και
-                                        να αυξήσει τις
-                                        δυνατότητες για συνολικό κέρδος.
-                                    </p>
-                                    <p>Θυμηθείτε, ο τζόγος πρέπει να είναι μια μορφή ψυχαγωγίας και οι πρακτικές
-                                        υπεύθυνου παιχνιδιού συμβάλλουν σε μια πιο ευχάριστη και βιώσιμη εμπειρία. Να
-                                        δίνετε πάντα
-                                        προτεραιότητα στη διασκέδαση έναντι του οικονομικού κέρδους και να προσεγγίζετε
-                                        τον τζόγο με συνειδητή και ενημερωμένη στάση.
-                                    </p>
-                                </div>
+                <div class="col-lg-6">
+                    <div class="contact_us_f">
+                        <h2>Φόρμα Επικοινωνίας
+                        </h2>
+                        <form action="#">
+                            <div class="form_div">
+                                <input type="text" name="user" id="user" placeholder="Your Name" autocomplete="off">
+
                             </div>
+                            <div class="form_div ">
+                                <input type="text" name="Your Email" id="Your Email" placeholder="Your Email"
+                                    autocomplete="off">
+                                <input type="text" name="Subj" id="Subj" placeholder="Subject" autocomplete="off">
+                            </div>
+                            <div class="text_a">
+                                <textarea id="w3review" name="w3review" rows="4" cols="50"
+                                    placeholder=" Message"></textarea>
+                            </div>
+                            <input type="submit" name="" id="sub" value="submit">
+                        </form>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="touch">
+                        <h4>Ελάτε σε επαφή μαζί μας</h4>
+                        <div class="mail">
+                            <ul>
+
+                                <li><a href="mailto:info@στοίχημαένα.com"><i
+                                            class="fa-regular fa-envelope"></i>info@στοίχημαένα.com</a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
+    <section class="game-description">
+        <div class="container">
+            <div class="game-description-one">
+                <p>Για συγκεκριμένες ερωτήσεις ή εξατομικευμένα αιτήματα, συμπληρώστε τη φόρμα επικοινωνίας παρακάτω. Η
+                    ομάδα μας θα απαντήσει το συντομότερο δυνατό.
+                </p>
 
+                <p>Ακολουθήστε μας στα Social Media:</p>
+                <p>Γίνετε μέλος της κοινότητάς μας στο Facebook, το Twitter και το Instagram για τα τελευταία νέα,
+                    ενημερώσεις και ειδικές προσφορές σε ξενοδοχεία στην Ιταλία.
+                </p>
+                <p>Σας ευχαριστούμε που μας επιλέξατε, εσείς ο κορυφαίος ιστότοπος σύγκρισης. Είμαστε εδώ για να σας
+                    μεταφέρουμε σε ένα αξέχαστο ταξίδι στις γραφικές τοποθεσίες της Ελλάδας. </p>
+            </div>
+
+        </div>
+    </section>
 
     <!-- site footer start -->
     <div class="footer">
@@ -285,8 +185,6 @@
     <script src="js/bootstrap.js"></script>
     <script src="js/jquery.js"></script>
     <script src="js/owl.carousel.js"></script>
-
-
     <script>
         $(document).ready(function () {
             $(".menu-toggle").click(function () {
@@ -309,9 +207,6 @@
             });
         });
     </script>
-
-
-
 
 </body>
 
