--- a/resorts.html
+++ b/resorts.html
@@ -136,7 +136,7 @@
                         <div class="col-lg-4">
                             <div class="trusted-col">
                                 <div class="img1">
-                                    <img src="images/Hote-p.jpg" alt="" class="img-fluid">
+                                    <a href="https://www.montecarlosbm.com/fr/hotel-monaco/hotel-paris-monte-carlo" target="_blank"><img src="images/Hote-p.jpg" alt="" class="img-fluid"></a>
                                     <div class="icon"><i class="bi bi-bar-chart"></i></div>
                                 </div>
                                 <h2 class="title"><a href="https://www.montecarlosbm.com/fr/hotel-monaco/hotel-paris-monte-carlo 
@@ -181,14 +181,12 @@
                         <div class="col-lg-4">
                             <div class="trusted-col">
                                 <div class="img1">
-                                    <a href="https://www.montecarlosbm.com/en/hotel-monaco/monte-carlo-bay-hotel-re sort "
-                                        target="_blank"> <img src="images/Venetian.jpg" alt=""
-                                            class="img-fluid"></a>
+                                    <a href="https://www.venetianlasvegas.com/" target="_blank"> <img
+                                            src="images/Venetian.jpg" alt="" class="img-fluid"></a>
                                     <div class="icon"><i class="bi bi-bar-chart"></i></div>
                                 </div>
-                                <h2 class="title"><a
-                                        href="https://www.montecarlosbm.com/en/hotel-monaco/monte-carlo-bay-hotel-re sort "
-                                        target="_blank">The Venetian Resort </a></h2>
+                                <h2 class="title"><a href="https://www.venetianlasvegas.com/" target="_blank">The
+                                        Venetian Resort </a></h2>
                                 <p>Το Venetian είναι ένα πολυτελές θέρετρο που αναπλάθει τη γοητεία της Βενετίας, με
                                     γόνδολες κατά μήκος του Μεγάλου Καναλιού. Με ένα από τα μεγαλύτερα καζίνο της πόλης,
                                     το Venetian προσφέρει πολυτελή καταλύματα, εστιατόρια παγκόσμιας κλάσης και μια
@@ -199,18 +197,16 @@
                         <div class="col-lg-4">
                             <div class="trusted-col">
                                 <div class="img1">
-                                    <img src="images/Hote-p.jpg" alt="" class="img-fluid">
+                                    <a href="https://www.wynnlasvegas.com/" target="_blank"> <img src="images/Wynn.jpg" alt=""
+                                            class="img-fluid"></a>
                                     <div class="icon"><i class="bi bi-bar-chart"></i></div>
                                 </div>
-                                <h2 class="title"><a href="https://www.montecarlosbm.com/fr/hotel-monaco/hotel-paris-monte-carlo 
-                                " target="_blank">Hotel de Paris Monte-Carlo</a></h2>
-                                <p> Ακριβώς απέναντι από το Casino de Monte-Carlo, το Hotel de Paris είναι ένα σύμβολο
-                                    στυλ
-                                    και κομψότητας. Τα πολυτελή δωμάτια, τα εστιατόρια παγκόσμιας κλάσης και η άψογη
-                                    εξυπηρέτηση κάνουν αυτό το ξενοδοχείο μια αριστοκρατική επιλογή για όσους
-                                    επισκέπτονται
-                                    το Μόναχο.
-                                </p>
+                                <h2 class="title"><a href="https://www.wynnlasvegas.com/" target="_blank">Γουίν Λας
+                                        Βέγκας </a></h2>
+                                <p>Το Wynn Las Vegas είναι η επιτομή της κομψότητας και της κομψότητας. Το καζίνο
+                                    αποπνέει πολυτέλεια και το ξενοδοχείο προσφέρει ευρύχωρα, κομψά δωμάτια με σύγχρονες
+                                    ανέσεις. Το Encore, μια επέκταση του Wynn, συνδέεται άψογα, προσφέροντας μια
+                                    πρόσθετη πινελιά πολυτέλειας. </p>
                             </div>
                         </div>
                     </div>
@@ -227,53 +223,43 @@
                         <div class="col-lg-4">
                             <div class="trusted-col">
                                 <div class="img1">
-                                    <a href="https://www.montecarlosbm.com/en/hotel-monaco/hotel-hermitage-monte-c arlo"
-                                        target="_blank">
-                                        <img src="images/Hotel-Hermitage.jpg" alt="" class="img-fluid"></a>
+                                    <a href="https://www.mgm.mo/" target="_blank">
+                                        <img src="images/Macau.jpg" alt="" class="img-fluid"></a>
                                     <div class="icon"><i class="bi bi-bar-chart"></i></div>
                                 </div>
-                                <h2 class="title"><a href="https://www.montecarlosbm.com/en/hotel-monaco/hotel-hermitage-monte-c arlo 
-                                " target="_blank"> Hotel Hermitage Monte-Carlo</a></h2>
-                                <p> Δίπλα στο Casino de Monte-Carlo, το Hotel Hermitage είναι ένα κόσμημα κλασικής
-                                    κομψότητας. Με πολυτελείς εσωτερικούς χώρους και προνομιακή τοποθεσία στην καρδιά
-                                    του
-                                    Μονακό, το ξενοδοχείο προσφέρει ένα πολυτελές καταφύγιο μετά από μια βραδιά με
-                                    παιχνίδια
-                                    καζίνο. </p>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="trusted-col">
-                                <div class="img1">
-                                    <a href="https://www.montecarlosbm.com/en/hotel-monaco/monte-carlo-bay-hotel-re sort "
-                                        target="_blank"> <img src="images/Monte-Carlo.webp" alt=""
-                                            class="img-fluid"></a>
-                                    <div class="icon"><i class="bi bi-bar-chart"></i></div>
-                                </div>
-                                <h2 class="title"><a
-                                        href="https://www.montecarlosbm.com/en/hotel-monaco/monte-carlo-bay-hotel-re sort "
-                                        target="_blank"> Monte-Carlo Bay Hotel & Resort </a></h2>
-                                <p>Αυτό το ξενοδοχείο καζίνο προσφέρει μια νότα νεωτερικότητας και χαλάρωσης. Ανάμεσα σε
-                                    καταπράσινους κήπους και με θέα στη Μεσόγειο Θάλασσα, το Monte-Carlo Bay Hotel &
-                                    Resort
-                                    συνδυάζει τη γοητεία του παιχνιδιού με μια χαλαρωτική ατμόσφαιρα.
+                                <h2 class="title"><a href="https://www.mgm.mo/" target="_blank">MGM Macau</a></h2>
+                                <p> Βρίσκεται στη χερσόνησο του Μακάο, το MGM Macau είναι ένας κομψός συνδυασμός στυλ
+                                    και εξυπηρέτησης πρώτης κατηγορίας. Το καζίνο του προσφέρει μεγάλη γκάμα παιχνιδιών,
+                                    ενώ τα δωμάτια και οι σουίτες προσφέρουν άνεση και πολυτέλεια.
                                 </p>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="trusted-col">
                                 <div class="img1">
-                                    <img src="images/Hote-p.jpg" alt="" class="img-fluid">
+                                    <a href="https://www.wynnresortsmacau.com/en/wynn-palace/" target="_blank"> <img
+                                            src="images/Wynn-Palace.jpg" alt="" class="img-fluid"></a>
                                     <div class="icon"><i class="bi bi-bar-chart"></i></div>
                                 </div>
-                                <h2 class="title"><a href="https://www.montecarlosbm.com/fr/hotel-monaco/hotel-paris-monte-carlo 
-                                " target="_blank">Hotel de Paris Monte-Carlo</a></h2>
-                                <p> Ακριβώς απέναντι από το Casino de Monte-Carlo, το Hotel de Paris είναι ένα σύμβολο
-                                    στυλ
-                                    και κομψότητας. Τα πολυτελή δωμάτια, τα εστιατόρια παγκόσμιας κλάσης και η άψογη
-                                    εξυπηρέτηση κάνουν αυτό το ξενοδοχείο μια αριστοκρατική επιλογή για όσους
-                                    επισκέπτονται
-                                    το Μόναχο.
+                                <h2 class="title"><a href="https://www.wynnresortsmacau.com/en/wynn-palace/"
+                                        target="_blank"> Wynn Palace </a></h2>
+                                <p>Το Wynn Palace είναι ένα σύμβολο πολυτέλειας και μεγαλείου. Βρίσκεται στην περιοχή
+                                    Cotai, το θέρετρο διαθέτει ένα υπερσύγχρονο καζίνο, εντυπωσιακά χορογραφημένα
+                                    σιντριβάνια και μια συνολική ατμόσφαιρα κομψότητας.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="trusted-col">
+                                <div class="img1">
+                                  <a href="https://www.galaxymacau.com/" target="_blank">  <img src="images/Galaxy.jpg" alt="" class="img-fluid"></a>
+                                    <div class="icon"><i class="bi bi-bar-chart"></i></div>
+                                </div>
+                                <h2 class="title"><a href="https://www.galaxymacau.com/" target="_blank">Galaxy
+                                        Macau</a></h2>
+                                <p> Το Galaxy Macau είναι ένα θέρετρο με περισσότερα από ένα καζίνο, προσφέροντας μια
+                                    ολοκληρωμένη εμπειρία ψυχαγωγίας. Στις εγκαταστάσεις του περιλαμβάνονται το Galaxy
+                                    Casino, το Broadway Macau και το πολυτελές ξενοδοχείο Galaxy.
                                 </p>
                             </div>
                         </div>
