--- a/hotel.html
+++ b/hotel.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/aos.css">
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <title>Ξενοδοχεία</title>
 </head>
@@ -50,7 +51,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="banner-content">
+                    <div class="banner-content" data-aos="fade-up">
                         <h2>Ξενοδοχεία</h2>
                         <p>Ξεκινήστε ένα ταξίδι απαράμιλλης κομψότητας και ανακαλύψτε τα καλύτερα καταλύματα που έχει να
                             προσφέρει η Ελλάδα. Η επαγγελματική ομάδα ταξιδιωτών μας έχει επιμεληθεί προσεκτικά μια
@@ -296,7 +297,7 @@
                     πληροφορίες για το ξενοδοχείο που αποφασίζετε να επισκεφτείτε.
                 </p>
             </div>
-       
+
         </div>
     </section>
     <!-- Before planning -->
@@ -350,7 +351,6 @@
     <script src="js/jquery.js"></script>
     <script src="js/owl.carousel.js"></script>
 
-
     <script>
         $(document).ready(function () {
             $(".menu-toggle").click(function () {
@@ -373,9 +373,12 @@
             });
         });
     </script>
-
-
-
+    <script src="js/aos.js"></script>
+    <script>
+        AOS.init({
+            duration: 1200,
+        })
+    </script>
 
 </body>
 
